--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@
     bottom: 0px;
     height: 100%;
     width: 300px;
-    background-color: grey;
+    background-color: #B7D1DA;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .turtleInput {
